--- a/.github/workflows/4-expressions-and-context.yml
+++ b/.github/workflows/4-expressions-and-context.yml
@@ -92,7 +92,7 @@ jobs:
         run: |
           echo "=== String Transformations ==="
           echo "Original ref: ${{ github.ref }}"
-          echo "Clean branch name: ${{ replace(github.ref, 'refs/heads/', '') }}"
+          echo "Clean branch name: ${{ github.ref_name }}"
           echo "Uppercase branch: ${{ upper(github.ref_name) }}"
           echo "Lowercase branch: ${{ lower(github.ref_name) }}"
           echo "Branch contains 'main': ${{ contains(github.ref_name, 'main') }}"
